[package]
name = "braintrust"
version = "0.1.0"
authors = ["Ethan Wright <ethan@flareline.com>"]
description = "A neural network library built in Rust"
repository = "https://github.com/FlareLine/braintrust"
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
